Fix text wrap for password

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,6 +20,7 @@
   border-width: 0.5px;
   padding: 0.25em;
   font-size: 1.25em;
+  overflow-wrap: anywhere;
 }
 
 .app-panel {
